use explicit version (16.1.0) of com.google.android.gms:play-services-gcm (version 17.0.0 is part of a MAJOR version update and breaking change)

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,6 +35,6 @@ android {
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
-    compile 'com.google.android.gms:play-services-gcm:+'
+    compile 'com.google.android.gms:play-services-gcm:16.1.0'
     compile 'org.nanohttpd:nanohttpd:2.3.1'
 }
